--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -59,7 +59,7 @@
       </section>
       <section class="bg-white p-4 rounded shadow">
         <h2>Lista de Profesores</h2>
-        <form id="form-busqueda" action="#" method="get" class="mb-3">  <!-- Agregado id="form-busqueda" -->
+        <form id="form-busqueda" action="#" method="get" class="mb-3">  
           <label for="busqueda" class="form-label"
             >Buscar por especialidad:</label
           >
@@ -170,7 +170,7 @@
         }
       }
 
-      // Función para filtrar la tabla (mejorada para mostrar todas si el valor está vacío)
+      // Función para filtrar la tabla 
       function filtrarTabla(tipo, valor) {
         const tbody = document.querySelector(`#${tipo}-table tbody`);
         const rows = tbody.querySelectorAll("tr");
@@ -180,7 +180,7 @@
             row.style.display = "";
           });
         } else {
-          // Filtrar por especialidad (columna 2, índice 2)
+          // Filtrar por especialidad 
           rows.forEach((row) => {
             const especialidad = row.cells[2].textContent.toLowerCase();
             if (especialidad.includes(valor.toLowerCase())) {
@@ -210,7 +210,7 @@
           this.reset(); // Limpiar formulario
         });
 
-      // Event listener para el formulario de búsqueda (nuevo)
+      // Event listener para el formulario de búsqueda
       document
         .getElementById("form-busqueda")
         .addEventListener("submit", function (event) {
