--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -34,8 +34,8 @@
         </section>
         <section class="bg-white p-4 rounded shadow">
             <h2>Lista de Cursos</h2>
-            <form id="form-busqueda" action="#" method="get" class="mb-3">  <!-- Agregado id="form-busqueda" -->
-                <label for="busqueda" class="form-label">Buscar por profesor:</label>  <!-- Cambiado a "Buscar por profesor:" -->
+            <form id="form-busqueda" action="#" method="get" class="mb-3">  
+                <label for="busqueda" class="form-label">Buscar por profesor:</label>  
                 <input
                     type="text"
                     id="busqueda"
@@ -134,7 +134,7 @@
             }
         }
 
-        // Función para filtrar la tabla (adaptada para filtrar por profesor, columna 3, y manejar valor vacío)
+        // Función para filtrar la tabla 
         function filtrarTabla(tipo, valor) {
             const tbody = document.querySelector(`#${tipo}-table tbody`);
             const rows = tbody.querySelectorAll("tr");
@@ -144,7 +144,7 @@
                     row.style.display = "";
                 });
             } else {
-                // Filtrar por profesor (columna 3, índice 3)
+                // Filtrar por profesor 
                 rows.forEach((row) => {
                     const profesor = row.cells[3].textContent.toLowerCase();
                     if (profesor.includes(valor.toLowerCase())) {
@@ -175,7 +175,7 @@
                 this.reset(); // Limpiar formulario
             });
 
-        // Event listener para el formulario de búsqueda (nuevo, adaptado de profesores.html)
+        // Event listener para el formulario de búsqueda
         document
             .getElementById("form-busqueda")
             .addEventListener("submit", function (event) {
