--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -58,20 +58,42 @@
                 <tbody></tbody>
             </table>
         </section>
+        <!-- NUEVO: Modal para editar curso -->
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Editar Curso</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="form-edit-cursos" class="d-flex flex-column">
+                            <label for="edit-nombre" class="form-label">Nombre:</label>
+                            <input type="text" id="edit-nombre" name="nombre" required minlength="3" class="form-control mb-3">
+                            <label for="edit-duracion" class="form-label">Duración (horas):</label>
+                            <input type="number" id="edit-duracion" name="duracion" required min="1" class="form-control mb-3">
+                            <label for="edit-profesor" class="form-label">Profesor:</label>
+                            <input type="text" id="edit-profesor" name="profesor" required class="form-control mb-3">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-primary" id="btn-guardar-edit">Guardar Cambios</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="text-center mt-4 text-muted">
         <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
-    <script type="module">
-        // Importar Supabase desde esm.sh (compatible con módulos ES)
-        import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
 
-        // Inicialización de Supabase
+    <script type="module">
+        import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
         const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
         const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
         const supabase = createClient(supabaseUrl, supabaseKey);
 
-        // Función para cargar la tabla
         async function cargarTabla(tipo) {
             try {
                 const { data, error } = await supabase.from(tipo).select("*");
@@ -85,33 +107,33 @@
                         td.textContent = val;
                         row.appendChild(td);
                     });
+                    // NUEVO: Botón de editar
+                    const tdEditar = document.createElement("td");
+                    const btnEditar = document.createElement("button");
+                    btnEditar.textContent = "Editar";
+                    btnEditar.className = "btn btn-warning btn-sm me-2";
+                    btnEditar.onclick = () => abrirModalEditar(tipo, item);
+                    tdEditar.appendChild(btnEditar);
                     // Botón de eliminar
-                    const tdEliminar = document.createElement("td");
                     const btnEliminar = document.createElement("button");
                     btnEliminar.textContent = "Eliminar";
                     btnEliminar.className = "btn btn-danger btn-sm";
                     btnEliminar.onclick = () => eliminarDato(tipo, item.id);
-                    tdEliminar.appendChild(btnEliminar);
-                    row.appendChild(tdEliminar);
+                    tdEditar.appendChild(btnEliminar);
+                    row.appendChild(tdEditar);
                     tbody.appendChild(row);
                 });
             } catch (err) {
                 console.error("Error cargando tabla:", err);
-                alert("Error al cargar datos. Verifica tu conexión a Supabase.");
+                alert("Error al cargar datos.");
             }
         }
 
-        // Función para insertar datos
         async function insertarDato(tipo, formData) {
             try {
-                const { data, error } = await supabase
-                    .from(tipo)
-                    .insert([formData])
-                    .select();
+                const { data, error } = await supabase.from(tipo).insert([formData]).select();
                 if (error) throw error;
-                if (document.querySelector(`#${tipo}-table tbody`)) {
-                    await cargarTabla(tipo);
-                }
+                await cargarTabla(tipo);
                 alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} agregado exitosamente.`);
             } catch (err) {
                 console.error("Error insertando dato:", err);
@@ -119,7 +141,6 @@
             }
         }
 
-        // Función para eliminar datos
         async function eliminarDato(tipo, id) {
             if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
                 try {
@@ -134,17 +155,14 @@
             }
         }
 
-        // Función para filtrar la tabla 
         function filtrarTabla(tipo, valor) {
             const tbody = document.querySelector(`#${tipo}-table tbody`);
             const rows = tbody.querySelectorAll("tr");
             if (valor.trim() === "") {
-                // Si el valor está vacío, mostrar todas las filas
                 rows.forEach((row) => {
                     row.style.display = "";
                 });
             } else {
-                // Filtrar por profesor 
                 rows.forEach((row) => {
                     const profesor = row.cells[3].textContent.toLowerCase();
                     if (profesor.includes(valor.toLowerCase())) {
@@ -156,33 +174,58 @@
             }
         }
 
-        // Event listener para cargar la tabla al cargar la página
+        // NUEVO: Función para abrir modal y prellenar datos
+        function abrirModalEditar(tipo, item) {
+            document.getElementById('edit-nombre').value = item.nombre;
+            document.getElementById('edit-duracion').value = item.duracion;
+            document.getElementById('edit-profesor').value = item.profesor;
+            const modal = new bootstrap.Modal(document.getElementById('editModal'));
+            modal.show();
+            document.getElementById('btn-guardar-edit').onclick = async () => {
+                const formData = {
+                    nombre: document.getElementById('edit-nombre').value,
+                    duracion: parseInt(document.getElementById('edit-duracion').value),
+                    profesor: document.getElementById('edit-profesor').value,
+                };
+                await editarDato(tipo, item.id, formData);
+                modal.hide();
+            };
+        }
+
+        // NUEVO: Función para editar datos
+        async function editarDato(tipo, id, formData) {
+            try {
+                const { error } = await supabase.from(tipo).update(formData).eq("id", id);
+                if (error) throw error;
+                await cargarTabla(tipo);
+                alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} actualizado exitosamente.`);
+            } catch (err) {
+                console.error("Error editando dato:", err);
+                alert("Error al editar dato.");
+            }
+        }
+
         window.addEventListener("load", async function () {
             await cargarTabla("cursos");
         });
 
-        // Event listener asíncrono para el formulario de agregar curso
-        document
-            .getElementById("form-cursos")
-            .addEventListener("submit", async function (event) {
-                event.preventDefault();
-                const formData = {
-                    nombre: document.getElementById("nombre").value,
-                    duracion: parseInt(document.getElementById("duracion").value),
-                    profesor: document.getElementById("profesor").value,
-                };
-                await insertarDato("cursos", formData);
-                this.reset(); // Limpiar formulario
-            });
+        document.getElementById("form-cursos").addEventListener("submit", async function (event) {
+            event.preventDefault();
+            const formData = {
+                nombre: document.getElementById("nombre").value,
+                duracion: parseInt(document.getElementById("duracion").value),
+                profesor: document.getElementById("profesor").value,
+            };
+            await insertarDato("cursos", formData);
+            this.reset();
+        });
 
-        // Event listener para el formulario de búsqueda
-        document
-            .getElementById("form-busqueda")
-            .addEventListener("submit", function (event) {
-                event.preventDefault(); // Prevenir el envío por defecto
-                const valor = document.getElementById("busqueda").value;
-                filtrarTabla("cursos", valor);
-            });
+        document.getElementById("form-busqueda").addEventListener("submit", function (event) {
+            event.preventDefault();
+            const valor = document.getElementById("busqueda").value;
+            filtrarTabla("cursos", valor);
+        });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
