--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -1,223 +1,223 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profesores</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Supabase se cargará en el script module al final -->
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilos.css">
+</head>
+<body class="bg-light">
     <header class="bg-primary text-white text-center py-3">
-      <h1>Módulo de Profesores</h1>
+        <h1>Módulo de Profesores</h1>
     </header>
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light justify-content-center"
-    >
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="login.html">Volver al Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="cursos.html">Cursos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="estudiantes.html">Estudiantes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="registro.html">Registro</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="estudiantes.html">Estudiantes</a></li>
+            <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
+            <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
+        </ul>
     </nav>
     <main class="container mt-4">
-      <section class="bg-white p-4 rounded shadow mb-4">
-        <h2>Agregar Profesor</h2>
-        <form id="form-profesores" class="d-flex flex-column">
-          <label for="nombre" class="form-label">Nombre:</label>
-          <input
-            type="text"
-            id="nombre"
-            name="nombre"
-            required
-            minlength="3"
-            class="form-control mb-3"
-          />
-          <label for="especialidad" class="form-label">Especialidad:</label>
-          <input
-            type="text"
-            id="especialidad"
-            name="especialidad"
-            required
-            class="form-control mb-3"
-          />
-          <button type="submit" class="btn btn-success">Agregar</button>
-        </form>
-      </section>
-      <section class="bg-white p-4 rounded shadow">
-        <h2>Lista de Profesores</h2>
-        <form id="form-busqueda" action="#" method="get" class="mb-3">  
-          <label for="busqueda" class="form-label"
-            >Buscar por especialidad:</label
-          >
-          <input
-            type="text"
-            id="busqueda"
-            name="busqueda"
-            class="form-control"
-            placeholder="Ingrese especialidad"
-          />
-          <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
-        </form>
-        <table id="profesores-table" class="table table-striped">
-          <thead class="table-primary">
-            <tr>
-              <th>ID</th>
-              <th>Nombre</th>
-              <th>Especialidad</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </section>
+        <section class="bg-white p-4 rounded shadow mb-4">
+            <h2>Agregar Profesor</h2>
+            <form id="form-profesores" class="d-flex flex-column">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required minlength="3" class="form-control mb-3">
+                <label for="especialidad" class="form-label">Especialidad:</label>
+                <input type="text" id="especialidad" name="especialidad" required class="form-control mb-3">
+                <button type="submit" class="btn btn-success">Agregar</button>
+            </form>
+        </section>
+        <section class="bg-white p-4 rounded shadow">
+            <h2>Lista de Profesores</h2>
+            <form id="form-busqueda" action="#" method="get" class="mb-3">  
+                <label for="busqueda" class="form-label">Buscar por especialidad:</label>  
+                <input
+                    type="text"
+                    id="busqueda"
+                    name="busqueda"
+                    class="form-control"
+                    placeholder="Ingrese especialidad"
+                />
+                <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
+            </form>
+            <table id="profesores-table" class="table table-striped">
+                <thead class="table-primary">
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Especialidad</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+        <!-- NUEVO: Modal para editar profesor -->
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Editar Profesor</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="form-edit-profesores" class="d-flex flex-column">
+                            <label for="edit-nombre" class="form-label">Nombre:</label>
+                            <input type="text" id="edit-nombre" name="nombre" required minlength="3" class="form-control mb-3">
+                            <label for="edit-especialidad" class="form-label">Especialidad:</label>
+                            <input type="text" id="edit-especialidad" name="especialidad" required class="form-control mb-3">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-primary" id="btn-guardar-edit">Guardar Cambios</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="text-center mt-4 text-muted">
-      <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
 
     <script type="module">
-      // Importar Supabase desde esm.sh (compatible con módulos ES)
-      import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+        import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+        const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
+        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
+        const supabase = createClient(supabaseUrl, supabaseKey);
 
-      // Inicialización de Supabase
-      const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
-      const supabaseKey =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
-      const supabase = createClient(supabaseUrl, supabaseKey);
-
-      // Función para cargar la tabla
-      async function cargarTabla(tipo) {
-        try {
-          const { data, error } = await supabase.from(tipo).select("*");
-          if (error) throw error;
-          const tbody = document.querySelector(`#${tipo}-table tbody`);
-          tbody.innerHTML = "";
-          data.forEach((item) => {
-            const row = document.createElement("tr");
-            Object.values(item).forEach((val) => {
-              const td = document.createElement("td");
-              td.textContent = val;
-              row.appendChild(td);
-            });
-            // Botón de eliminar
-            const tdEliminar = document.createElement("td");
-            const btnEliminar = document.createElement("button");
-            btnEliminar.textContent = "Eliminar";
-            btnEliminar.className = "btn btn-danger btn-sm";
-            btnEliminar.onclick = () => eliminarDato(tipo, item.id);
-            tdEliminar.appendChild(btnEliminar);
-            row.appendChild(tdEliminar);
-            tbody.appendChild(row);
-          });
-        } catch (err) {
-          console.error("Error cargando tabla:", err);
-          alert("Error al cargar datos. Verifica tu conexión a Supabase.");
-        }
-      }
-
-      // Función para insertar datos
-      async function insertarDato(tipo, formData) {
-        try {
-          const { data, error } = await supabase
-            .from(tipo)
-            .insert([formData])
-            .select();
-          if (error) throw error;
-          if (document.querySelector(`#${tipo}-table tbody`)) {
-            await cargarTabla(tipo);
-          }
-          alert(
-            `${
-              tipo.charAt(0).toUpperCase() + tipo.slice(1)
-            } agregado exitosamente.`
-          );
-        } catch (err) {
-          console.error("Error insertando dato:", err);
-          alert("Error al agregar dato.");
-        }
-      }
-
-      // Función para eliminar datos
-      async function eliminarDato(tipo, id) {
-        if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
-          try {
-            const { error } = await supabase.from(tipo).delete().eq("id", id);
-            if (error) throw error;
-            await cargarTabla(tipo);
-            alert(
-              `${
-                tipo.charAt(0).toUpperCase() + tipo.slice(1)
-              } eliminado exitosamente.`
-            );
-          } catch (err) {
-            console.error("Error eliminando dato:", err);
-            alert("Error al eliminar dato.");
-          }
-        }
-      }
-
-      // Función para filtrar la tabla 
-      function filtrarTabla(tipo, valor) {
-        const tbody = document.querySelector(`#${tipo}-table tbody`);
-        const rows = tbody.querySelectorAll("tr");
-        if (valor.trim() === "") {
-          // Si el valor está vacío, mostrar todas las filas
-          rows.forEach((row) => {
-            row.style.display = "";
-          });
-        } else {
-          // Filtrar por especialidad 
-          rows.forEach((row) => {
-            const especialidad = row.cells[2].textContent.toLowerCase();
-            if (especialidad.includes(valor.toLowerCase())) {
-              row.style.display = "";
-            } else {
-              row.style.display = "none";
+        async function cargarTabla(tipo) {
+            try {
+                const { data, error } = await supabase.from(tipo).select("*");
+                if (error) throw error;
+                const tbody = document.querySelector(`#${tipo}-table tbody`);
+                tbody.innerHTML = "";
+                data.forEach((item) => {
+                    const row = document.createElement("tr");
+                    Object.values(item).forEach((val) => {
+                        const td = document.createElement("td");
+                        td.textContent = val;
+                        row.appendChild(td);
+                    });
+                    // NUEVO: Botón de editar
+                    const tdEditar = document.createElement("td");
+                    const btnEditar = document.createElement("button");
+                    btnEditar.textContent = "Editar";
+                    btnEditar.className = "btn btn-warning btn-sm me-2";
+                    btnEditar.onclick = () => abrirModalEditar(tipo, item);
+                    tdEditar.appendChild(btnEditar);
+                    // Botón de eliminar
+                    const btnEliminar = document.createElement("button");
+                    btnEliminar.textContent = "Eliminar";
+                    btnEliminar.className = "btn btn-danger btn-sm";
+                    btnEliminar.onclick = () => eliminarDato(tipo, item.id);
+                    tdEditar.appendChild(btnEliminar);
+                    row.appendChild(tdEditar);
+                    tbody.appendChild(row);
+                });
+            } catch (err) {
+                console.error("Error cargando tabla:", err);
+                alert("Error al cargar datos.");
             }
-          });
         }
-      }
 
-      // Event listener para cargar la tabla al cargar la página
-      window.addEventListener("load", async function () {
-        await cargarTabla("profesores");
-      });
+        async function insertarDato(tipo, formData) {
+            try {
+                const { data, error } = await supabase.from(tipo).insert([formData]).select();
+                if (error) throw error;
+                await cargarTabla(tipo);
+                alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} agregado exitosamente.`);
+            } catch (err) {
+                console.error("Error insertando dato:", err);
+                alert("Error al agregar dato.");
+            }
+        }
 
-      // Event listener asíncrono para el formulario de agregar profesor
-      document
-        .getElementById("form-profesores")
-        .addEventListener("submit", async function (event) {
-          event.preventDefault();
-          const formData = {
-            nombre: document.getElementById("nombre").value,
-            especialidad: document.getElementById("especialidad").value,
-          };
-          await insertarDato("profesores", formData);
-          this.reset(); // Limpiar formulario
+        async function eliminarDato(tipo, id) {
+            if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
+                try {
+                    const { error } = await supabase.from(tipo).delete().eq("id", id);
+                    if (error) throw error;
+                    await cargarTabla(tipo);
+                    alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} eliminado exitosamente.`);
+                } catch (err) {
+                    console.error("Error eliminando dato:", err);
+                    alert("Error al eliminar dato.");
+                }
+            }
+        }
+
+        function filtrarTabla(tipo, valor) {
+            const tbody = document.querySelector(`#${tipo}-table tbody`);
+            const rows = tbody.querySelectorAll("tr");
+            if (valor.trim() === "") {
+                rows.forEach((row) => {
+                    row.style.display = "";
+                });
+            } else {
+                rows.forEach((row) => {
+                    const especialidad = row.cells[2].textContent.toLowerCase();
+                    if (especialidad.includes(valor.toLowerCase())) {
+                        row.style.display = "";
+                    } else {
+                        row.style.display = "none";
+                    }
+                });
+            }
+        }
+
+        // NUEVO: Función para abrir modal y prellenar datos
+        function abrirModalEditar(tipo, item) {
+            document.getElementById('edit-nombre').value = item.nombre;
+            document.getElementById('edit-especialidad').value = item.especialidad;
+            const modal = new bootstrap.Modal(document.getElementById('editModal'));
+            modal.show();
+            document.getElementById('btn-guardar-edit').onclick = async () => {
+                const formData = {
+                    nombre: document.getElementById('edit-nombre').value,
+                    especialidad: document.getElementById('edit-especialidad').value,
+                };
+                await editarDato(tipo, item.id, formData);
+                modal.hide();
+            };
+        }
+
+        // NUEVO: Función para editar datos
+        async function editarDato(tipo, id, formData) {
+            try {
+                const { error } = await supabase.from(tipo).update(formData).eq("id", id);
+                if (error) throw error;
+                await cargarTabla(tipo);
+                alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} actualizado exitosamente.`);
+            } catch (err) {
+                console.error("Error editando dato:", err);
+                alert("Error al editar dato.");
+            }
+        }
+
+        window.addEventListener("load", async function () {
+            await cargarTabla("profesores");
         });
 
-      // Event listener para el formulario de búsqueda
-      document
-        .getElementById("form-busqueda")
-        .addEventListener("submit", function (event) {
-          event.preventDefault(); // Prevenir el envío por defecto
-          const valor = document.getElementById("busqueda").value;
-          filtrarTabla("profesores", valor);
+        document.getElementById("form-profesores").addEventListener("submit", async function (event) {
+            event.preventDefault();
+            const formData = {
+                nombre: document.getElementById("nombre").value,
+                especialidad: document.getElementById("especialidad").value,
+            };
+            await insertarDato("profesores", formData);
+            this.reset();
+        });
+
+        document.getElementById("form-busqueda").addEventListener("submit", function (event) {
+            event.preventDefault();
+            const valor = document.getElementById("busqueda").value;
+            filtrarTabla("profesores", valor);
         });
     </script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
