--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -80,7 +80,7 @@
         </div>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
 
     <script type="module">
@@ -102,7 +102,7 @@
                         td.textContent = val;
                         row.appendChild(td);
                     });
-                    // NUEVO: Botón de editar
+                    // Botón de editar
                     const tdEditar = document.createElement("td");
                     const btnEditar = document.createElement("button");
                     btnEditar.textContent = "Editar";
@@ -169,7 +169,7 @@
             }
         }
 
-        // NUEVO: Función para abrir modal y prellenar datos
+        // Función para abrir y llenar datos
         function abrirModalEditar(tipo, item) {
             document.getElementById('edit-nombre').value = item.nombre;
             document.getElementById('edit-especialidad').value = item.especialidad;
@@ -185,7 +185,7 @@
             };
         }
 
-        // NUEVO: Función para editar datos
+        // Función para editar datos
         async function editarDato(tipo, id, formData) {
             try {
                 const { error } = await supabase.from(tipo).update(formData).eq("id", id);
