--- a/pages/estudiantes.html
+++ b/pages/estudiantes.html
@@ -95,7 +95,7 @@
           <tbody></tbody>
         </table>
       </section>
-      <!-- NUEVO: Modal para editar estudiante -->
+      <!-- Para editar estudiante -->
       <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -122,11 +122,11 @@
       </div>
     </main>
     <footer class="text-center mt-4 text-muted">
-      <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
+      <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
 
     <script type="module">
-      // Importar Supabase desde esm.sh (compatible con módulos ES)
+      // Importar Supabase desde esm.sh
       import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
 
       // Inicialización de Supabase
@@ -149,14 +149,14 @@
               td.textContent = val;
               row.appendChild(td);
             });
-            // NUEVO: Botón de editar
+            // Botón de editar
             const tdEditar = document.createElement("td");
             const btnEditar = document.createElement("button");
             btnEditar.textContent = "Editar";
             btnEditar.className = "btn btn-warning btn-sm me-2";
             btnEditar.onclick = () => abrirModalEditar(tipo, item);
             tdEditar.appendChild(btnEditar);
-            // Botón de eliminar (existente)
+            // Botón de eliminar 
             const btnEliminar = document.createElement("button");
             btnEliminar.textContent = "Eliminar";
             btnEliminar.className = "btn btn-danger btn-sm";
@@ -171,7 +171,7 @@
         }
       }
 
-      // Función para insertar datos (sin cambios)
+      // Función para insertar datos
       async function insertarDato(tipo, formData) {
         try {
           const { data, error } = await supabase
@@ -193,7 +193,7 @@
         }
       }
 
-      // Función para eliminar datos (sin cambios)
+      // Función para eliminar datos
       async function eliminarDato(tipo, id) {
         if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
           try {
@@ -212,7 +212,7 @@
         }
       }
 
-      // Función para filtrar la tabla (sin cambios)
+      // Función para filtrar la tabla
       function filtrarTabla(tipo, valor) {
         const tbody = document.querySelector(`#${tipo}-table tbody`);
         const rows = tbody.querySelectorAll("tr");
@@ -232,7 +232,7 @@
         }
       }
 
-      // NUEVO: Función para abrir modal y prellenar datos
+      // Función para abrir y llenar datos
       function abrirModalEditar(tipo, item) {
         document.getElementById('edit-nombre').value = item.nombre;
         document.getElementById('edit-correo').value = item.correo;
@@ -240,7 +240,7 @@
         // Mostrar modal
         const modal = new bootstrap.Modal(document.getElementById('editModal'));
         modal.show();
-        // Event listener para guardar (único por modal)
+        // Event listener para guardar
         document.getElementById('btn-guardar-edit').onclick = async () => {
           const formData = {
             nombre: document.getElementById('edit-nombre').value,
@@ -252,7 +252,7 @@
         };
       }
 
-      // NUEVO: Función para editar datos
+      // Función para editar datos
       async function editarDato(tipo, id, formData) {
         try {
           const { error } = await supabase.from(tipo).update(formData).eq("id", id);
@@ -265,7 +265,7 @@
         }
       }
 
-      // Event listeners (sin cambios, excepto agregar Bootstrap JS)
+      // Event listeners
       window.addEventListener("load", async function () {
         await cargarTabla("estudiantes");
       });
@@ -291,7 +291,7 @@
           filtrarTabla("estudiantes", valor);
         });
     </script>
-    <!-- Agregar Bootstrap JS para modales -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
