--- a/pages/registro.html
+++ b/pages/registro.html
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
@@ -84,7 +84,7 @@
                 e.preventDefault();
                 const formData = {
                     nombre: document.getElementById('nombre').value,
-                    correo: document.getElementById('email').value,  // Mapeado a 'correo' para coincidir con la tabla
+                    correo: document.getElementById('email').value,  // Mapeado a correo para coincidir con la tabla
                     edad: parseInt(document.getElementById('edad').value)
                 };
                 await insertarDato('estudiantes', formData);  // Inserta en 'estudiantes'
